Fixed z-index of wrapper

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -70,6 +70,8 @@ p, ul {
     background-color: #fff;
     @include box-shadow(0 2px 10px 0 rgba(0, 0, 0, 0.26));
     border-radius: 2px;
+    position: relative;
+    z-index: 100;
 }
 .header {
     margin-bottom: -200px;
@@ -79,6 +81,8 @@ p, ul {
     background-attachment: fixed;
     @include background-size;
     @include box-shadow(inset 0 -10px 30px rgba(0,0,0,.26));
+    position: relative;
+    z-index: 99;
 
     .header-inner {
         color: #fff;
